WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198356
Missing caret when focusing an editable field if the selection was set when WKWebView wasn't first responder
https://bugs.webkit.org/show_bug.cgi?id=198356
Summary
Missing caret when focusing an editable field if the selection was set when W...
Wenson Hsieh
Reported
2019-05-29 17:18:44 PDT
<
rdar://problem/50798593
>
Attachments
Patch
(9.97 KB, patch)
2019-05-29 20:37 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-05-29 20:37:44 PDT
Created
attachment 370917
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-30 13:06:44 PDT
Comment on
attachment 370917
[details]
Patch Clearing flags on attachment: 370917 Committed
r245902
: <
https://trac.webkit.org/changeset/245902
>
WebKit Commit Bot
Comment 3
2019-05-30 13:06:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug